--- a/chess/index.html
+++ b/chess/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="images/javascript.svg" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Document</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="js/main.js"></script>
+    chess
   </body>
 </html>
