--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <a href="./chess/index">CHESS</a>
+    <a href="chess/index.html">CHESS</a>
     <div id="app"></div>
     <script type="module" src="js/main.js"></script>
   </body>
